--- a/tokens/application.json
+++ b/tokens/application.json
@@ -4,7 +4,7 @@
       "control": {
         "height": {
           "sm": {
-            "value": "{component.dimension.control.height.md} - 0.5rem",
+            "value": "{app.dimension.control.height.md} - 0.5rem",
             "type": "dimension"
           },
           "md": {
@@ -12,7 +12,7 @@
             "type": "dimension"
           },
           "lg": {
-            "value": "{component.dimension.control.height.md} + 0.5rem",
+            "value": "{app.dimension.control.height.md} + 0.5rem",
             "type": "dimension"
           }
         },
@@ -54,7 +54,7 @@
       "label": {
         "height": {
           "sm": {
-            "value": "{component.dimension.control.height.md} - 0.5rem",
+            "value": "{app.dimension.control.height.md} - 0.5rem",
             "type": "dimension"
           },
           "md": {
@@ -62,7 +62,7 @@
             "type": "dimension"
           },
           "lg": {
-            "value": "{component.dimension.control.height.md} + 0.5rem",
+            "value": "{app.dimension.control.height.md} + 0.5rem",
             "type": "dimension"
           }
         },
