wip: typography tokens

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -552,7 +552,7 @@
               "fontFamily": "{config.typography.control.text.fontFamily}",
               "fontWeight": "{config.typography.control.text.fontWeight}",
               "lineHeight": "{config.typography.control.text.lineHeight}",
-              "fontSize": "{config.typography.control.text.fontSize} - 0.125rem"
+              "fontSize": "{config.typography.control.text.fontSize.sm}"
             },
             "type": "typography"
           },
@@ -561,7 +561,7 @@
               "fontFamily": "{config.typography.control.text.fontFamily}",
               "fontWeight": "{config.typography.control.text.fontWeight}",
               "lineHeight": "{config.typography.control.text.lineHeight}",
-              "fontSize": "{config.typography.control.text.fontSize}"
+              "fontSize": "{config.typography.control.text.fontSize.base}"
             },
             "type": "typography"
           },
@@ -570,7 +570,7 @@
               "fontFamily": "{config.typography.control.text.fontFamily}",
               "fontWeight": "{config.typography.control.text.fontWeight}",
               "lineHeight": "{config.typography.control.text.lineHeight}",
-              "fontSize": "{config.typography.control.text.fontSize} + 0.125rem"
+              "fontSize": "{config.typography.control.text.fontSize.base} + 0.125rem"
             },
             "type": "typography"
           }
@@ -581,7 +581,7 @@
               "fontFamily": "{config.typography.control.symbol.fontFamily}",
               "fontWeight": "{config.typography.control.symbol.fontWeight}",
               "lineHeight": "{config.typography.control.symbol.lineHeight}",
-              "fontSize": "{config.typography.control.symbol.fontSize} - 0.125rem"
+              "fontSize": "{config.typography.control.symbol.fontSize.base} - 0.125rem"
             },
             "type": "typography"
           },
@@ -590,7 +590,7 @@
               "fontFamily": "{config.typography.control.symbol.fontFamily}",
               "fontWeight": "{config.typography.control.symbol.fontWeight}",
               "lineHeight": "{config.typography.control.symbol.lineHeight}",
-              "fontSize": "{config.typography.control.symbol.fontSize}"
+              "fontSize": "{config.typography.control.symbol.fontSize.md}"
             },
             "type": "typography"
           },
@@ -599,7 +599,7 @@
               "fontFamily": "{config.typography.control.symbol.fontFamily}",
               "fontWeight": "{config.typography.control.symbol.fontWeight}",
               "lineHeight": "{config.typography.control.symbol.lineHeight}",
-              "fontSize": "{config.typography.control.symbol.fontSize} + 0.125rem"
+              "fontSize": "{config.typography.control.symbol.fontSize.lg}"
             },
             "type": "typography"
           }
@@ -612,7 +612,7 @@
               "fontFamily": "{config.typography.label.text.fontFamily}",
               "fontWeight": "{config.typography.label.text.fontWeight}",
               "lineHeight": "{config.typography.label.text.lineHeight}",
-              "fontSize": "{config.typography.label.text.fontSize} - 0.125rem"
+              "fontSize": "{config.typography.label.text.fontSize.sm}"
             },
             "type": "typography"
           },
@@ -621,7 +621,7 @@
               "fontFamily": "{config.typography.label.text.fontFamily}",
               "fontWeight": "{config.typography.label.text.fontWeight}",
               "lineHeight": "{config.typography.label.text.lineHeight}",
-              "fontSize": "{config.typography.label.text.fontSize}"
+              "fontSize": "{config.typography.label.text.fontSize.md}"
             },
             "type": "typography"
           },
@@ -630,7 +630,7 @@
               "fontFamily": "{config.typography.label.text.fontFamily}",
               "fontWeight": "{config.typography.label.text.fontWeight}",
               "lineHeight": "{config.typography.label.text.lineHeight}",
-              "fontSize": "{config.typography.label.text.fontSize} + 0.125rem"
+              "fontSize": "{config.typography.label.text.fontSize.lg}"
             },
             "type": "typography"
           }
