--- a/tokens/application.json
+++ b/tokens/application.json
@@ -572,7 +572,7 @@
               "fontFamily": "{config.typography.control.text.fontFamily}",
               "fontWeight": "{config.typography.control.text.fontWeight}",
               "lineHeight": "{config.typography.control.text.lineHeight}",
-              "fontSize": "{config.typography.control.text.fontSize.base} + 0.125rem"
+              "fontSize": "{config.typography.control.text.fontSize.lg}"
             },
             "type": "typography",
             "description": "Please only use ”Font”, ”Weight”, “Line Height” and “Font Size”. All other values will be discarded after compiling the tokens. Please also refrain from using any calculations for the values above."
