wip: token structure

--- a/tokens/application:dark.json
+++ b/tokens/application:dark.json
@@ -76,6 +76,16 @@
             }
           }
         }
+      },
+      "component": {
+        "primary": {
+          "bg": {
+            "solid": {
+              "value": "red",
+              "type": "color"
+            }
+          }
+        }
       }
     }
   }
