wip: color tokens

--- a/tokens/application:dark.json
+++ b/tokens/application:dark.json
@@ -81,8 +81,10 @@
         "primary": {
           "bg": {
             "solid": {
-              "value": "red",
-              "type": "color"
+              "default": {
+                "value": "red",
+                "type": "color"
+              }
             }
           }
         }
