--- a/tokens/application.json
+++ b/tokens/application.json
@@ -391,72 +391,180 @@
         "primary": {
           "bg": {
             "solid": {
-              "type": "color",
-              "value": "hsl({config.color.primary.hue}, {config.color.primary.saturation}, 50%)"
+              "default": {
+                "type": "color",
+                "value": "hsla({config.color.primary.hue}, {config.color.primary.saturation}, 50%, 1)"
+              },
+              "hover": {
+                "type": "color",
+                "value": "{app.color.component.primary.bg.solid.default}",
+                "$extensions": {
+                  "studio.tokens": {
+                    "modify": {
+                      "type": "darken",
+                      "value": "{app.modifier.color.primary.solid.hover}",
+                      "space": "hsl"
+                    }
+                  }
+                }
+              },
+              "active": {
+                "type": "color",
+                "value": "{app.color.component.primary.bg.solid.default}",
+                "$extensions": {
+                  "studio.tokens": {
+                    "modify": {
+                      "type": "darken",
+                      "value": "{app.modifier.color.primary.solid.active}",
+                      "space": "hsl"
+                    }
+                  }
+                }
+              }
             },
             "translucent": {
-              "type": "color",
-              "value": "hsla({config.color.primary.hue}, {config.color.primary.saturation}, 50%, {app.modifier.color.primary.translucent.default})"
+              "default": {
+                "type": "color",
+                "value": "hsla({config.color.primary.hue}, {config.color.primary.saturation}, 50%, {app.modifier.color.primary.translucent.default})"
+              },
+              "hover": {
+                "type": "color",
+                "value": "{app.color.component.primary.bg.translucent.default}",
+                "$extensions": {
+                  "studio.tokens": {
+                    "modify": {
+                      "type": "darken",
+                      "value": "{app.modifier.color.primary.translucent.hover}",
+                      "space": "hsl"
+                    }
+                  }
+                }
+              },
+              "active": {
+                "type": "color",
+                "value": "{app.color.component.primary.bg.translucent.default}",
+                "$extensions": {
+                  "studio.tokens": {
+                    "modify": {
+                      "type": "darken",
+                      "value": "{app.modifier.color.primary.translucent.active}",
+                      "space": "hsl"
+                    }
+                  }
+                }
+              }
             }
           },
           "border": {
             "solid": {
-              "type": "color",
-              "value": "hsl({config.color.primary.hue}, {config.color.primary.saturation}, 40%)"
+              "default": {
+                "type": "color",
+                "value": "hsl({config.color.primary.hue}, {config.color.primary.saturation}, 40%)"
+              },
+              "hover": {
+                "type": "color",
+                "value": "{app.color.component.primary.border.solid.default}",
+                "$extensions": {
+                  "studio.tokens": {
+                    "modify": {
+                      "type": "darken",
+                      "value": "{app.modifier.color.primary.solid.hover}",
+                      "space": "hsl"
+                    }
+                  }
+                }
+              },
+              "active": {
+                "type": "color",
+                "value": "{app.color.component.primary.border.solid.default}",
+                "$extensions": {
+                  "studio.tokens": {
+                    "modify": {
+                      "type": "darken",
+                      "value": "{app.modifier.color.primary.solid.active}",
+                      "space": "hsl"
+                    }
+                  }
+                }
+              }
             },
             "translucent": {
-              "type": "color",
-              "value": "hsla({config.color.primary.hue}, {config.color.primary.saturation}, 50%, {app.modifier.color.primary.translucent.default})"
+              "default": {
+                "type": "color",
+                "value": "hsla({config.color.primary.hue}, {config.color.primary.saturation}, 50%, {app.modifier.color.primary.translucent.default})"
+              },
+              "hover": {
+                "type": "color",
+                "value": "{app.color.component.primary.border.translucent.default}",
+                "$extensions": {
+                  "studio.tokens": {
+                    "modify": {
+                      "type": "darken",
+                      "value": "{app.modifier.color.primary.translucent.hover}",
+                      "space": "hsl"
+                    }
+                  }
+                }
+              },
+              "active": {
+                "type": "color",
+                "value": "{app.color.component.primary.border.translucent.default}",
+                "$extensions": {
+                  "studio.tokens": {
+                    "modify": {
+                      "type": "darken",
+                      "value": "{app.modifier.color.primary.translucent.active}",
+                      "space": "hsl"
+                    }
+                  }
+                }
+              }
             }
           },
           "fg": {
             "solid": {
-              "type": "color",
-              "value": "hsl({config.color.primary.hue}, {config.color.primary.saturation}, 40%)"
+              "default": {
+                "type": "color",
+                "value": "hsl({config.color.primary.hue}, {config.color.primary.saturation}, 40%)"
+              },
+              "hover": {
+                "type": "color",
+                "value": "{app.color.component.primary.fg.solid.default}",
+                "$extensions": {
+                  "studio.tokens": {
+                    "modify": {
+                      "type": "darken",
+                      "value": "{app.modifier.color.primary.solid.hover}",
+                      "space": "hsl"
+                    }
+                  }
+                }
+              },
+              "active": {
+                "type": "color",
+                "value": "{app.color.component.primary.fg.solid.default}",
+                "$extensions": {
+                  "studio.tokens": {
+                    "modify": {
+                      "type": "darken",
+                      "value": "{app.modifier.color.primary.solid.active}",
+                      "space": "hsl"
+                    }
+                  }
+                }
+              }
             },
             "onSolid": {
-              "type": "color",
-              "value": "white"
+              "default": {
+                "type": "color",
+                "value": "white"
+              }
             },
             "onTranslucent": {
-              "type": "color",
-              "value": "hsl({config.color.primary.hue}, {config.color.primary.saturation}, 20%)"
-            }
-          }
-        },
-        "secondary": {
-          "bg": {
-            "solid": {
-              "type": "color",
-              "value": "hsl({config.color.secondary.hue}, {config.color.secondary.saturation}, 50%)"
-            },
-            "translucent": {
-              "type": "color",
-              "value": "hsla({config.color.secondary.hue}, {config.color.secondary.saturation}, 50%, {app.modifier.color.secondary.translucent.default})"
-            }
-          },
-          "border": {
-            "solid": {
-              "type": "color",
-              "value": "hsl({config.color.secondary.hue}, {config.color.secondary.saturation}, 40%)"
-            },
-            "translucent": {
-              "type": "color",
-              "value": "hsla({config.color.secondary.hue}, {config.color.secondary.saturation}, 50%, {app.modifier.color.secondary.translucent.default})"
-            }
-          },
-          "fg": {
-            "solid": {
-              "type": "color",
-              "value": "hsl({config.color.secondary.hue}, {config.color.secondary.saturation}, 30%)"
-            },
-            "onSolid": {
-              "type": "color",
-              "value": "white"
-            },
-            "onTranslucent": {
-              "type": "color",
-              "value": "hsl({config.color.secondary.hue}, {config.color.secondary.saturation}, 20%)"
+              "default": {
+                "type": "color",
+                "value": "hsl({config.color.primary.hue}, {config.color.primary.saturation}, 20%)"
+              }
             }
           }
         }
