wip: token layers

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -433,7 +433,7 @@
                 "$extensions": {
                   "studio.tokens": {
                     "modify": {
-                      "type": "darken",
+                      "type": "lighten",
                       "value": "{app.modifier.color.primary.translucent.hover}",
                       "space": "hsl"
                     }
@@ -446,7 +446,7 @@
                 "$extensions": {
                   "studio.tokens": {
                     "modify": {
-                      "type": "darken",
+                      "type": "lighten",
                       "value": "{app.modifier.color.primary.translucent.active}",
                       "space": "hsl"
                     }
@@ -499,7 +499,7 @@
                 "$extensions": {
                   "studio.tokens": {
                     "modify": {
-                      "type": "darken",
+                      "type": "lighten",
                       "value": "{app.modifier.color.primary.translucent.hover}",
                       "space": "hsl"
                     }
@@ -512,7 +512,7 @@
                 "$extensions": {
                   "studio.tokens": {
                     "modify": {
-                      "type": "darken",
+                      "type": "lighten",
                       "value": "{app.modifier.color.primary.translucent.active}",
                       "space": "hsl"
                     }
@@ -613,7 +613,7 @@
                 "$extensions": {
                   "studio.tokens": {
                     "modify": {
-                      "type": "darken",
+                      "type": "lighten",
                       "value": "{app.modifier.color.secondary.translucent.hover}",
                       "space": "hsl"
                     }
@@ -626,7 +626,7 @@
                 "$extensions": {
                   "studio.tokens": {
                     "modify": {
-                      "type": "darken",
+                      "type": "lighten",
                       "value": "{app.modifier.color.secondary.translucent.active}",
                       "space": "hsl"
                     }
@@ -679,7 +679,7 @@
                 "$extensions": {
                   "studio.tokens": {
                     "modify": {
-                      "type": "darken",
+                      "type": "lighten",
                       "value": "{app.modifier.color.secondary.translucent.hover}",
                       "space": "hsl"
                     }
@@ -692,7 +692,7 @@
                 "$extensions": {
                   "studio.tokens": {
                     "modify": {
-                      "type": "darken",
+                      "type": "lighten",
                       "value": "{app.modifier.color.secondary.translucent.active}",
                       "space": "hsl"
                     }
