--- a/tokens/config type.json
+++ b/tokens/config type.json
@@ -180,7 +180,7 @@
             "type": "other"
           },
           "fontFamily": {
-            "value": "{config.fontFamily.control}",
+            "value": "{config.fontFamily.ui}",
             "type": "other"
           },
           "lineHeight": {
@@ -242,7 +242,7 @@
       "label": {
         "text": {
           "fontFamily": {
-            "value": "{config.fontFamily.control}",
+            "value": "{config.fontFamily.ui}",
             "type": "other"
           },
           "fontWeight": {
