--- a/tokens/application.json
+++ b/tokens/application.json
@@ -49,6 +49,12 @@
             "value": "{app.dimension.control.radius.md} + 0.125rem",
             "type": "dimension"
           }
+        },
+        "border": {
+          "default": {
+            "value": "1px",
+            "type": "dimension"
+          }
         }
       },
       "label": {
@@ -97,6 +103,12 @@
           },
           "lg": {
             "value": "{app.dimension.control.radius.md} + 0.125rem",
+            "type": "dimension"
+          }
+        },
+        "border": {
+          "default": {
+            "value": "1px",
             "type": "dimension"
           }
         }
